# secure-source-code-analyzer

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  config.yaml  malicious_code.py  pyproject.toml  requirements.txt  scanner.py  setup.py
.github/workflows/: security_scan.yml
core/: clone_repo.py  dependency_check.py  policy_config.py  report.py  scan_insecure.py
reports/: scan_report_2024-11-14T13-56-32.json  scan_report_2024-11-14T14-09-36.json  scan_report_2024-11-14T14-18-57.json  scan_report_2024-11-14T15-51-10.json  scan_report_2024-11-14T16-35-13.json  scan_report_2025-04-06T19-44-35.json
secure_source_code_analyzer/core/: clone_repo.py  dependency_check.py  detect_malicious.py
secure_source_code_analyzer/tests/: test_clone_repo.py  test_detect_malicious.py  test_policy_config.py  test_report.py  test_scan_insecure.py
tests/: test_clone_repo.py  test_dependency_check.py  test_detect_malicious.py  test_policy_config.py  test_report.py  test_scan_insecure.py
