[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "secure-source-code-analyzer"
version = "0.1"
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
description = "A secure source code analyzer"
requires-python = ">=3.8"
dependencies = [
    "gitpython",
    "pyyaml",
    "requests",
] 